--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "misterrager8",
   "version": "0.1.0",
+  "homepage": "https://misterrager8.github.io/misterrager8/",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
